// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildWorkOrderEmail > snapshot: legacy buildWorkOrderEmail output for the canonical baseInput 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"/></head>
<body style="margin:0;padding:0;background-color:#FAF7F2;font-family:Arial,sans-serif;color:#2C2520;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="background-color:#FAF7F2;padding:40px 20px;">
    <tr><td align="center">
      <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600" style="max-width:600px;background-color:#FFFEFB;border:0.5px solid #E8DDD0;">
        <tr><td style="padding:32px 40px 24px;">
          <div style="font-size:11.5px;font-weight:600;letter-spacing:0.14em;color:#9E8E80;text-transform:uppercase;">LA SPREZZATURA</div>
          <div style="font-size:11.5px;color:#9E8E80;margin-top:4px;">Linha Studio</div>
        </td></tr>
        <tr><td style="padding:8px 40px 24px;">
          <h1 style="font-family:Georgia,serif;font-size:22px;font-weight:600;color:#2C2520;margin:0 0 12px;line-height:1.3;">Work order ready for review</h1>
          <div style="font-size:13px;color:#6B5E52;">Acme Home &middot; April 26, 2026</div>
        </td></tr>
        <tr><td style="padding:0 40px 24px;">
          <p style="font-size:13px;line-height:1.6;margin:0 0 16px;">Marco,</p>
          <p style="font-size:13px;line-height:1.6;margin:0;">Your work order for Acme Home is ready. Use the link below to view the latest version &mdash; it always reflects our most recent edits.</p>
        </td></tr>
        <tr><td align="center" style="padding:8px 40px 40px;">
          <a href="https://example.com/workorder/project/P1/orders/WO1" style="display:inline-block;background-color:#9A7B4B;color:#FFFEFB;font-size:11px;font-weight:600;letter-spacing:0.14em;text-transform:uppercase;text-decoration:none;padding:13.6px 32px;border-radius:2px;">VIEW WORK ORDER</a>
        </td></tr>
        <tr><td style="padding:0 40px 32px;border-top:0.5px solid #E8DDD0;">
          <div style="font-size:12px;color:#9E8E80;margin-top:24px;">Liz Albert</div>
          <div style="font-size:12px;color:#9E8E80;margin-top:4px;">La Sprezzatura &middot; Linha Studio</div>
          <div style="font-size:12px;color:#9E8E80;margin-top:4px;">Darien, CT</div>
        </td></tr>
      </table>
    </td></tr>
  </table>
</body></html>"
`;

exports[`buildWorkOrderEmail > snapshot: legacy buildWorkOrderEmail output with HTML-escaped project title 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"/></head>
<body style="margin:0;padding:0;background-color:#FAF7F2;font-family:Arial,sans-serif;color:#2C2520;">
  <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="100%" style="background-color:#FAF7F2;padding:40px 20px;">
    <tr><td align="center">
      <table role="presentation" cellpadding="0" cellspacing="0" border="0" width="600" style="max-width:600px;background-color:#FFFEFB;border:0.5px solid #E8DDD0;">
        <tr><td style="padding:32px 40px 24px;">
          <div style="font-size:11.5px;font-weight:600;letter-spacing:0.14em;color:#9E8E80;text-transform:uppercase;">LA SPREZZATURA</div>
          <div style="font-size:11.5px;color:#9E8E80;margin-top:4px;">Linha Studio</div>
        </td></tr>
        <tr><td style="padding:8px 40px 24px;">
          <h1 style="font-family:Georgia,serif;font-size:22px;font-weight:600;color:#2C2520;margin:0 0 12px;line-height:1.3;">Work order ready for review</h1>
          <div style="font-size:13px;color:#6B5E52;">&lt;script&gt;alert(1)&lt;/script&gt; &middot; April 26, 2026</div>
        </td></tr>
        <tr><td style="padding:0 40px 24px;">
          <p style="font-size:13px;line-height:1.6;margin:0 0 16px;">Marco,</p>
          <p style="font-size:13px;line-height:1.6;margin:0;">Your work order for &lt;script&gt;alert(1)&lt;/script&gt; is ready. Use the link below to view the latest version &mdash; it always reflects our most recent edits.</p>
        </td></tr>
        <tr><td align="center" style="padding:8px 40px 40px;">
          <a href="https://example.com/workorder/project/P1/orders/WO1" style="display:inline-block;background-color:#9A7B4B;color:#FFFEFB;font-size:11px;font-weight:600;letter-spacing:0.14em;text-transform:uppercase;text-decoration:none;padding:13.6px 32px;border-radius:2px;">VIEW WORK ORDER</a>
        </td></tr>
        <tr><td style="padding:0 40px 32px;border-top:0.5px solid #E8DDD0;">
          <div style="font-size:12px;color:#9E8E80;margin-top:24px;">Liz Albert</div>
          <div style="font-size:12px;color:#9E8E80;margin-top:4px;">La Sprezzatura &middot; Linha Studio</div>
          <div style="font-size:12px;color:#9E8E80;margin-top:4px;">Darien, CT</div>
        </td></tr>
      </table>
    </td></tr>
  </table>
</body></html>"
`;
